# jdnn

./: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  dev.sh  environment.yml
include/: matrix.hpp  nn.hpp
